添加模型配置Web UI，修复trace中关于工具调用结果判断字段的json映射导致数据库内容列表无法读取